2008-04-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-menu-doc,
	(produce-menu-doc-html): New functions.
	(produce-doc-*): Moved to clfswm-autodoc.lisp.

	* src/clfswm-util.lisp (paste-selection-no-clear): Prevent to
	paste a child on one of its own children. (this prevent a
	recursive bug).
	(move-child-to): Rename move/copy-current-child-by to
	move/copy-child-to.
	(mouse-move-window-over-frame): New function to move the window
	under the mouse cursor to another frame.

	* src/clfswm-internal.lisp (find-child-in-parent): New function.

2008-04-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Display unmanaged
	windows only when its window parent is the current child.

2008-04-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (manage-current-window)
	(unmanage-current-window): New functions: Allow to force to manage
	or unmanage a window by its parent frame.

	* src/bindings-second-mode.lisp (#\o): binded to
	set-open-in-new-frame-in-parent-frame-nw-hook and
	(#\o :control) to set-open-in-new-frame-in-root-frame-nw-hook

	* src/clfswm-util.lisp (with-current-window): New macro.

	* src/xlib-util.lisp (move-window, resize-window): Remove uneeded
	exposure and enter-window handle event.

	* src/clfswm-util.lisp (move-frame, resize-frame): Show all
	children for the current child after the move/resize.

2008-04-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (resize-window): Take care of window size
	hints.

	* src/clfswm-util.lisp (mouse-focus-move/resize-generic): Allow to
	move/resize unmanaged windows.

	* src/xlib-util.lisp (move-window, resize-window): New functions.

2008-04-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (current-frame-manage-window-type): Let the
	user choose what window type the current frame must handle.
	(display-current-window-info): New function.