@@ -1456,7 +1456,7 @@
           
         </td>
         <td align="center" nowrap>
-          Clfswm  motion
+          Motion
         </td>
         <td style="color:#0000ff" nowrap>
           Grab text
