@@ -43,13 +43,13 @@
       a: <a href="#FRAME-ADDING-MENU">< Adding frame menu ></a>
     </p>
     <p>
-      l: < Frame layout menu >
+      l: <a href="#FRAME-LAYOUT-MENU">< Frame layout menu ></a>
     </p>
     <p>
-      o: < Frame layout menu (Set only once) >
+      o: <a href="#FRAME-LAYOUT-ONCE-MENU">< Frame layout menu (Only once) ></a>
     </p>
     <p>
-      n: < Frame new window hook menu >
+      n: <a href="#FRAME-NW-HOOK-MENU">< Frame new window hook menu ></a>
     </p>
     <p>
       m: <a href="#FRAME-MOVEMENT-MENU">< Frame movement menu ></a>
@@ -78,6 +78,78 @@
     </p>
     <p>
       p: Add a placed frame
+    </p>
+    <hr>
+    <h3>
+      <a name="FRAME-LAYOUT-MENU"></a><a href="#FRAME-MENU">Frame-Layout-Menu</a>
+    </h3>
+    <p>
+      a: Maximize windows in there frame - leave frame to there size (no layout)
+    </p>
+    <p>
+      b: Tile child in its frame
+    </p>
+    <p>
+      c: Tile Left: main child on left and others on right
+    </p>
+    <p>
+      d: Tile Right: main child on right and others on left
+    </p>
+    <p>
+      e: Tile Top: main child on top and others on bottom
+    </p>
+    <p>
+      f: Tile Bottom: main child on bottom and others on top
+    </p>
+    <p>
+      g: Tile Space: tile child in its frame leaving spaces between them
+    </p>
+    <hr>
+    <h3>
+      <a name="FRAME-LAYOUT-ONCE-MENU"></a><a href="#FRAME-MENU">Frame-Layout-Once-Menu</a>
+    </h3>
+    <p>
+      a: Maximize windows in there frame - leave frame to there size (no layout)
+    </p>
+    <p>
+      b: Tile child in its frame
+    </p>
+    <p>
+      c: Tile Left: main child on left and others on right
+    </p>
+    <p>
+      d: Tile Right: main child on right and others on left
+    </p>
+    <p>
+      e: Tile Top: main child on top and others on bottom
+    </p>
+    <p>
+      f: Tile Bottom: main child on bottom and others on top
+    </p>
+    <p>
+      g: Tile Space: tile child in its frame leaving spaces between them
+    </p>
+    <hr>
+    <h3>
+      <a name="FRAME-NW-HOOK-MENU"></a><a href="#FRAME-MENU">Frame-Nw-Hook-Menu</a>
+    </h3>
+    <p>
+      a: Open the next window in the current frame
+    </p>
+    <p>
+      b: Open the next window in the current root
+    </p>
+    <p>
+      c: Open the next window in a new frame in the current root
+    </p>
+    <p>
+      d: Open the next window in a new frame in the root frame
+    </p>
+    <p>
+      e: Open the next window in a new frame in the parent frame
+    </p>
+    <p>
+      f: Open the next window in the current frame and leave the focus on the current child
     </p>
     <hr>
     <h3>
