@@ -12,7 +12,7 @@ y: < Utility menu >
 Frame-Menu
 a: < Adding frame menu >
 l: < Frame layout menu >
-o: < Frame layout menu (Set only once) >
+o: < Frame layout menu (Only once) >
 n: < Frame new window hook menu >
 m: < Frame movement menu >
 w: < Managed window type menu >
@@ -24,6 +24,32 @@ x: Create a new frame for each window in frame
 Frame-Adding-Menu
 a: Add a default frame
 p: Add a placed frame
+
+Frame-Layout-Menu
+a: Maximize windows in there frame - leave frame to there size (no layout)
+b: Tile child in its frame
+c: Tile Left: main child on left and others on right
+d: Tile Right: main child on right and others on left
+e: Tile Top: main child on top and others on bottom
+f: Tile Bottom: main child on bottom and others on top
+g: Tile Space: tile child in its frame leaving spaces between them
+
+Frame-Layout-Once-Menu
+a: Maximize windows in there frame - leave frame to there size (no layout)
+b: Tile child in its frame
+c: Tile Left: main child on left and others on right
+d: Tile Right: main child on right and others on left
+e: Tile Top: main child on top and others on bottom
+f: Tile Bottom: main child on bottom and others on top
+g: Tile Space: tile child in its frame leaving spaces between them
+
+Frame-Nw-Hook-Menu
+a: Open the next window in the current frame
+b: Open the next window in the current root
+c: Open the next window in a new frame in the current root
+d: Open the next window in a new frame in the root frame
+e: Open the next window in a new frame in the parent frame
+f: Open the next window in the current frame and leave the focus on the current child
 
 Frame-Movement-Menu
 p: < Frame pack menu >
